
Changes in JMurmel-1.3.1 relative to JMurmel-1.3

 * added special form "try" and function "typep"


Changes in JMurmel-1.3 relative to JMurmel-1.2.2

 * changed car and cdr so that they are no longer defined for symbols, i.e. (car 'aaa)
   now is an error.
 * changed the evaluator of the interpreter so that lists whose car is 'lambda' are
   no longer valid functions. e.g.
     (apply '(lambda (a b) (+ a b)) '(1 2))
   no longer works but gives an error.
   Old behaviour can be restored by the commandline flag '--XX-oldlambda' (interpreter only).
 * changed self-recursive invocations from late binding to early binding
 * changed fixnums from 64 bit to 54 bit (53 bits + 1 sign bit)
 * changed internal-time-units-per-second to integer
 * changed write, writeln, lnwrite to return the first argument (was: t)
 * changed read to throw an error on EOF unless a new optional argument was given

 * added the global variables "most-positive-fixnum" and "most-negative-fixnum"
 * added the special operators catch, throw and unwind-protect
 * added functionp
 * added simple-string-p
 * added vector support:
   * make-array, array-dimension-limit, adjustable-array-p
   * vector, vectorp, vector-add, vector-length, vector-copy, vector-fill, vector->list, list->vector
   * simple-vector-p, svref, svset, svlength, list->simple-vector and simple-vector->list
 * added bitvector support:
   * bit-vector-p, bv=, simple-bit-vector-p, bvref (similar to CL bit), bvset, bvlength
   * list->bit-vector and bit-vector->list
 * added writable strings
   * slength, sref (identical to CL char), sset
   * list->string now has an optional parameter: (list->string lst [adjustablep])
 * added seqref, seqset
   seqref is similar to CL elt, seqset is similar to CL (setf elt)
 * added the global variables @-, @+, @++, @+++, @*, @**, @***, @/, @//, @///
   to the environment inside the REPL.
   If you remove the leading @ then these work similar to Common Lisp's REPL variables.