@@ -1062,6 +1062,12 @@ pi ; ==> 3.141592653589793
 (macroexpand-1 '(add2 3))      ; --> (+ 3 2)
                                ; --> t
 
+; = (error datum . arguments) -> |
+;
+; Since 1.3.1
+;
+; Similar to CL's `error`.
+
 
 ;;; == Time
 
