@@ -71,6 +71,8 @@ simple-bit-vector-p
 functionp
 
 listp
+typep
+
 adjustable-array-p
 
 car
@@ -141,7 +143,7 @@ gensym
 macroexpand-1
 trace
 untrace
-fatal
+error
 
 get-internal-real-time
 get-internal-run-time
